convert2.py now can cut on vars that aren't features (as long as you specify them in the .json file); various other improvements and bug fixes

--- a/python/subtlenet/convert_settings.json
+++ b/python/subtlenet/convert_settings.json
@@ -11,16 +11,17 @@
         	},
 		{
 		"name":"BGHToWW",
-		"samples": ["BGHtoWW_merged"]
+		"samples": ["BGHToWW_smaller"]
 		},
 		{
 		"name": "Background",
 		"samples": ["QCD_HT1000to1500"]
     }
     ],
-    "features": ["fj_cpf_pt", "fj_cpf_pup", "fj_pt"],
-    "weight": "mu0_pt",
-    "cut": "(df.fj_pt > 400)",
+    "features": ["fj_cpf_pt","fj_cpf_eta","fj_cpf_dz","fj_cpf_eta","fj_cpf_phi","fj_cpf_pup","fj_cpf_q","fj_cpf_vtxID","fj_ipf_pt","fj_ipf_eta","fj_ipf_dz","fj_ipf_eta","fj_ipf_phi","fj_ipf_pup"],
+    "weight": "sf_ptWeight",
+    "cut_vars": ["fj_pt", "fj_msd", "fj_nProngs"],
+    "cut": "(df.fj_pt > 400) & (df.fj_msd > 40) & (df.fj_nProngs == 2)",
     "substructure_vars": ["fj_N2sdb1"],
     "default": "fj_cpf_pt"
 }
